--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines":{
+    "node": "8.11.1"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
