--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Decentralized Ethereum Token Exchange",
   "private": true,
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.0.43",
     "apexcharts": "3.6.3",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -44,7 +45,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "engines":{
+  "engines": {
     "node": "9.10.0"
   },
   "browserslist": [
