--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "web3": "1.2.11"
   },
   "scripts": {
-    "start": "react-scripts build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
